--- a/src/layouts/post.astro
+++ b/src/layouts/post.astro
@@ -232,9 +232,9 @@ let prevUrl = postIndex < allPosts.length ? allPosts[allPosts.length - postIndex
           id="giscus-script"
           src="https://giscus.app/client.js"
           data-repo={SITE.repo}
-          data-repo-id="R_kgDOG4TsQA"
-          data-category="General"
-          data-category-id="DIC_kwDOG4TsQM4CR4bV"
+          data-repo-id="R_kgDOM4qz_g"
+          data-category="Announcements"
+          data-category-id="DIC_kwDOM4qz_s4Ci4xR"
           data-mapping="title"
           data-strict="0"
           data-reactions-enabled="1"
