--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -29,5 +29,8 @@ const preloadImage = image ? `${image}?x-oss-process=image/resize,w_3600/format,
 <meta property='og:description' content={description} />
 <meta property='og:url' content={pageURL} />
 <meta property='og:site_name' content={pageTitle} />
+<meta name="msvalidate.01" content="B6FE76A783A1770409EC903DE2C7AC6A" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3614504270218797"
+     crossorigin="anonymous"></script>
 
 {preloadImage && <link rel='preload' href={preloadImage} as='image' />}
