--- a/src/layouts/post.astro
+++ b/src/layouts/post.astro
@@ -192,6 +192,7 @@ let prevUrl = postIndex < allPosts.length ? allPosts[allPosts.length - postIndex
             <Search />
           </h1>
           <slot />
+          /* 这是一个注释 赞赏按钮
           <div class="flex align-middle justify-center mt-4">
             <a
               class="inline-block items-center rounded px-5 py-3 text-sm font-medium pay-button"
@@ -200,6 +201,7 @@ let prevUrl = postIndex < allPosts.length ? allPosts[allPosts.length - postIndex
               rel="noreferrer">你觉得有收获吗？❤️</a
             >
           </div>
+          */
           <hr />
           <div class="flex justify-between md:flex-row flex-col mt-2 post-footer">
             <div class="text-gray-800 dark:text-gray-200 flex-1">
