feat: google 分析 + 按钮

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -39,7 +39,7 @@ import ThemeSwitch from './ThemeSwitch.astro';
 </script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-DT01FBW30E" is:inline></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4ZMS4MK5S7" is:inline></script>
 <script>
   // @ts-nocheck
   window.dataLayer = window.dataLayer || [];
@@ -47,5 +47,5 @@ import ThemeSwitch from './ThemeSwitch.astro';
     dataLayer.push(arguments);
   }
   gtag('js', new Date());
-  gtag('config', 'G-DT01FBW30E');
+  gtag('config', 'G-4ZMS4MK5S7');
 </script>
